--- a/apps/api-runtime/pom.xml
+++ b/apps/api-runtime/pom.xml
@@ -100,29 +100,36 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>
-                                        com.akto.runtime.Main
-                                    </mainClass>
-                                </manifest>
-                            </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
-                        </configuration>
-                    </execution>
-                </executions>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <finalName>api-runtime-1.0-SNAPSHOT-jar-with-dependencies</finalName>
+                <archive>
+                <manifest>
+                    <addClasspath>true</addClasspath>
+                    <mainClass>com.akto.runtime.Main</mainClass>
+                    <classpathPrefix>dependency-jars/</classpathPrefix>
+                </manifest>
+                </archive>
+            </configuration>
             </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+                <execution>
+                <id>copy-dependencies</id>
+                <phase>package</phase>
+                <goals>
+                    <goal>copy-dependencies</goal>
+                </goals>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
+                </configuration>
+                </execution>
+            </executions>
+            </plugin>
+         
 
         </plugins>
         <sourceDirectory>src/main/java</sourceDirectory>
