--- a/apps/dashboard/pom.xml
+++ b/apps/dashboard/pom.xml
@@ -52,6 +52,11 @@
             <version>1.12.405</version>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ec2</artifactId>
+            <version>1.12.405</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
             <version>2.5.30</version>
