--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -31,6 +31,8 @@ on:
         required: false
         type: boolean
         default: false
+    env: 
+      AKTO_DASHBOARD_URL: https://flash.staging.akto.io/
       
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -87,7 +89,7 @@ jobs:
       - name: Update flash staging
         if: ${{ github.event.inputs.Environment == 'prod' }} && ${{ github.event.inputs.Deploy }}
         run: |
-          curl ${{secrets.AKTO_DASHBOARD_URL}}/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
+          curl $AKTO_DASHBOARD_URL/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -108,6 +110,7 @@ jobs:
         if: ${{ github.event.inputs.Environment == 'prod' }} && ${{ github.event.inputs.Deploy }}
         uses: oren-akto/akto-github-action@v1.0
         with:
-          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL: $AKTO_DASHBOARD_URL
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
-          AKTO_TEST_ID: ${{secrets.AKTO_TEST_ID}} 
+          AKTO_TEST_ID: 6422ab9dc6f3c725b360c403
+          START_TIME_DELAY: 180
