--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -38,8 +38,6 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env: 
-      AKTO_DASHBOARD_URL: https://flash.staging.akto.io/
       
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -89,7 +87,7 @@ jobs:
       - name: Update flash staging
         if: ${{ github.event.inputs.Environment == 'prod' }} && ${{ github.event.inputs.Deploy }}
         run: |
-          curl $AKTO_DASHBOARD_URL/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
+          curl https://flash.staging.akto.io/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -110,7 +108,7 @@ jobs:
         if: ${{ github.event.inputs.Environment == 'prod' }} && ${{ github.event.inputs.Deploy }}
         uses: oren-akto/akto-github-action@v1.0
         with:
-          AKTO_DASHBOARD_URL: $AKTO_DASHBOARD_URL
+          AKTO_DASHBOARD_URL: https://flash.staging.akto.io/
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
           AKTO_TEST_ID: 6422ab9dc6f3c725b360c403
           START_TIME_DELAY: 180
