--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtAddJku.yaml
@@ -22,4 +22,4 @@ info:
     - "https://portswigger.net/web-security/jwt/lab-jwt-authentication-bypass-via-jku-header-injection"
   author: Akto
 apiSelectionFilters:
-  authenticated: true
+  #authenticated: true
