--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtNoneAlgo.yaml
@@ -19,4 +19,4 @@ info:
     - "https://portswigger.net/kb/issues/00200901_jwt-none-algorithm-supported"
   author: Akto
 apiSelectionFilters:
-  authenticated: true
+  #authenticated: true
