--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/OldApiVersion.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/OldApiVersion.yaml
@@ -25,4 +25,5 @@ info:
     - "https://cwe.mitre.org/data/definitions/639.html"
   author: Akto
 apiSelectionFilters:
-  versionMatchRegex: /v(\d+)/
+  url:
+    regex: /v(\d+)/
