--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/JwtInvalidSignature.yaml
@@ -20,4 +20,4 @@ info:
     - "https://portswigger.net/kb/issues/00200900_jwt-signature-not-verified#:~:text=Description%3A%20JWT%20signature%20not%20verified&text=However%2C%20some%20servers%20fail%20to,privileges%20or%20impersonate%20other%20users."
   author: Akto
 apiSelectionFilters:
-  authenticated: true
+  #authenticated: true
