--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/PageDos.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/PageDos.yaml
@@ -10,7 +10,9 @@ info:
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa4-lack-of-resources-and-rate-limiting.md#scenario-2"
   author: Akto
 apiSelectionFilters:
-  paginationKeyWords:
-    - limit
-    - size
-    - page
+  queryParams:
+    - key:
+      or:
+        - regex: limit
+        - regex: size
+        - regex: page
